objects/ACP_Revenue_Growth_Perf__c.object
<CustomObject>
    <description>Alka 04/24/17 Created For Account Plan 
Object to capture information on Revenue Growth for Account Plan Performance review and plan</description>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>Revenue Growth</relationshipLabel>
        <relationshipName>Revenue_Growths</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Base_BU__c</fullName>
        <formula>IF(NOT(ISNULL(ACP_Past_year_Revenue__c)),ACP_Past_year_Revenue__c,0)  +
IF(NOT(ISNULL(ACP_LY_Market_Growth__c)),ACP_LY_Market_Growth__c,0)  +  
IF(NOT(ISNULL(ACP_LY_Price_Erosion__c)),ACP_LY_Price_Erosion__c,0)  +  
IF(NOT(ISNULL(ACP_Current_FY_Base__c)),ACP_Current_FY_Base__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base BU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_CYRR_Estimated_Final__c</fullName>
        <description>Hari 28 Nov 17 Added for Account Plan.</description>
        <label>CY RR Estimated Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Current_FY_Base__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>Current FY Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Current_FY_Close__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>Current FY Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Current_Year_1_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Current Year + 1 Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Current_Year_3_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Year + 3 Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Current_Year_5_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Current Year + 5 Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Current_Year_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Current Year Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Current_Year_Repeat_Business__c</fullName>
        <description>Hari 5 Oct 2017 Added for Account Plan to calculate Repeat Business</description>
        <formula>ACP_CYRR_Estimated_Final__c  + ACP_EOL_Lost_Business__c + ACP_Transfer_In_Out__c + ACP_LY_Price_Erosion__c + ACP_LY_Market_Growth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repeat Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Current_Year_Run_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Current Year Run Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Current_Year_to_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Current Year to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Data_Refreshed_On__c</fullName>
        <description>Alka 04/24/17 – Account Plan Performance review and plan
The date the data will be refreshed will be captured automatically</description>
        <formula>LastModifiedDate</formula>
        <label>Data Refreshed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACP_EOL_Lost_Business__c</fullName>
        <label>ACP EOL Lost Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Fiscal_Year__c</fullName>
        <description>Hari Created for Account Plan to store Fiscal Year</description>
        <label>Fiscal Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Forecast__c</fullName>
        <description>Hari 5 Oct 17 Created for Account Plan to calculate Forecast</description>
        <formula>ACP_Current_Year_Repeat_Business__c + ACP_Project_1__c + ACP_Project_2__c + ACP_Project_3__c + ACP_Project_4__c + ACP_Project_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Future_FY_2__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>Future FY 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Future_FY_3__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>Future FY 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_LY_Market_Growth__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>LY Market Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_LY_Price_Erosion__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>LY Price Erosion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Labels_1__c</fullName>
        <description>Ritika 11/23/17 – Account Plan revenue and growth</description>
        <label>Label 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Labels_2__c</fullName>
        <description>Ritika 11/23/17 – Account Plan revenue and growth</description>
        <label>Label 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Labels_3__c</fullName>
        <description>Ritika 11/23/17 – Account Plan revenue and growth</description>
        <label>Label 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Past_Year_1_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Past Year - 1 Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Past_Year_to_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Past Year to Date</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Past_year_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Past year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Project_1_Label__c</fullName>
        <description>Created For Account Plan</description>
        <label>Project 1 Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Project_1__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>Project 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Project_2_Label__c</fullName>
        <description>Created For Account Plan</description>
        <label>Project 2 Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Project_2__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>Project 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Project_3_Label__c</fullName>
        <label>Project 3 Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Project_3__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>Project 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Refresh_Based_on__c</fullName>
        <description>Alka 04/24/17 – Account Plan Performance review and plan
Based on this value the data on the Reveunue Growth will be changed.</description>
        <label>Refresh Based on</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                    <default>true</default>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>Booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Sales_Mode__c</fullName>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>Sales Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMA</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Combined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Show_this_on_chart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show this on chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_TE_Business_Performance_Comment__c</fullName>
        <description>Alka 04/24/17 – Account Plan Performance review and plan</description>
        <label>TE’s Business Performance Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Transfer_In_Out__c</fullName>
        <label>ACP Transfer In Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_YOM_Growth_Perc__c</fullName>
        <formula>IF(ACP_Past_Year_to_Date__c!=0,(ACP_Current_Year_to_Date__c -
 ACP_Past_Year_to_Date__c)/ACP_Past_Year_to_Date__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOM Growth</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_YOY_Current_Year_Perc__c</fullName>
        <formula>IF(ACP_Past_Year_1_Revenue__c != 0 , (ACP_Past_year_Revenue__c - ACP_Past_Year_1_Revenue__c)/ACP_Past_Year_1_Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY Current Year</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_YOY_Last_Year__c</fullName>
        <description>Alka 07/21/17 – Created for YoY Growth% calculation</description>
        <label>YOY Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dashboard_image__c</fullName>
        <label>Dashboard image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_FY_1__c</fullName>
        <description>Shashi 07/20/17 – Account Plan Growth tree</description>
        <label>Future FY 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Growth</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACP_Account_Plan__c</field>
            <operation>equals</operation>
            <value>a0J0S0000013Ve8UAE</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RG-{00000000}</displayFormat>
        <label>Revenue Growth Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Growth</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Market_Growth_Updation_Rule</fullName>
        <active>false</active>
        <description>Growth_Tree_Updation_Rule(Created to validate the fields).</description>
        <errorConditionFormula>ACP_LY_Market_Growth__c &lt; -100</errorConditionFormula>
        <errorDisplayField>ACP_Account_Plan__c</errorDisplayField>
        <errorMessage>Value For market growth should be equal or greater than -100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_Erosion_Updation_Rule</fullName>
        <active>false</active>
        <description>Growth_Tree_Updation_Rule(Created to validate the fields).</description>
        <errorConditionFormula>ACP_LY_Price_Erosion__c &lt; -100</errorConditionFormula>
        <errorDisplayField>ACP_Account_Plan__c</errorDisplayField>
        <errorMessage>Value For Price Erosion should be equal or greater than -100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project1_Updation_Rule</fullName>
        <active>false</active>
        <description>Growth_Tree_Updation_Rule(Created to validate the fields).</description>
        <errorConditionFormula>ACP_Project_1__c &lt; -100</errorConditionFormula>
        <errorMessage>Value For Label 2 should be equal or greater than -100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project2_Updation_Rule</fullName>
        <active>false</active>
        <description>Growth_Tree_Updation_Rule(Created to validate the fields).</description>
        <errorConditionFormula>ACP_Project_2__c &lt; -100</errorConditionFormula>
        <errorMessage>Value For Label 3 should be equal or greater than -100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project3_Updation_Rule</fullName>
        <active>false</active>
        <description>Growth_Tree_Updation_Rule(Created to validate the fields).</description>
        <errorConditionFormula>ACP_Project_3__c &lt; -100</errorConditionFormula>
        <errorDisplayField>ACP_Account_Plan__c</errorDisplayField>
        <errorMessage>Value For Label 4 should be equal or greater than -100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project4_Updation_Rule</fullName>
        <active>false</active>
        <description>Growth_Tree_Updation_Rule(Created to validate the fields).</description>
        <errorConditionFormula>ACP_Project_4__c &lt; -100</errorConditionFormula>
        <errorDisplayField>ACP_Account_Plan__c</errorDisplayField>
        <errorMessage>Value For Label 5 should be equal or greater than -100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project5_Updation_Rule</fullName>
        <active>false</active>
        <description>Growth_Tree_Updation_Rule(Created to validate the fields).</description>
        <errorConditionFormula>ACP_Project_5__c &lt; -100</errorConditionFormula>
        <errorMessage>Value For Label 6 should be equal or greater than -100.</errorMessage>
    </validationRules>
</CustomObject>